InnoDB: Make intermediate COMMITs in ALTER TABLE more robust (Bug #6633)